--- a/CA2.Rmd
+++ b/CA2.Rmd
@@ -7,7 +7,7 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE)
+knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 ```
 
 # Introduction
@@ -42,7 +42,7 @@ library(stringr)
 library(gt)
 ```
 
-```{r echo=FALSE}
+```{r}
 # Load the dataset
 steam_games <- read.csv("games_march2025_cleaned.csv")
 steam_games <- steam_games %>%
@@ -53,12 +53,7 @@ steam_games <- steam_games %>%
   )
 ```
 
-```{r echo=FALSE}
-# Display the first few rows of the dataset
-#head(steam_games)
-```
-
-```{r echo=FALSE}
+```{r}
 # Filter the data for pct_pos_total from 40 to 100
 steam_games_filtered <- steam_games %>%
   filter(pct_pos_total >= 40 & pct_pos_total <= 100, dlc_count <= 75) %>%
@@ -69,8 +64,8 @@ steam_games_filtered <- steam_games %>%
 max_dlc <- max(steam_games_filtered$dlc_count, na.rm = TRUE)
 ```
 
-```{r echo=FALSE}
-# Visualize the relationship between DLC count and average positive reviews
+```{r fig.width=10, fig.height=6}
+# VisualiSe the relationship between DLC count and average positive reviews
 ggplot(steam_games_filtered, aes(x = pct_pos_total, y = dlc_count)) +
   geom_point(alpha = 0.5) +
   scale_x_continuous(limits = c(40, 100)) +  # Limit the x-axis from 40 to 100
@@ -85,7 +80,7 @@ ggplot(steam_games_filtered, aes(x = pct_pos_total, y = dlc_count)) +
 
 The graph shows a general disconnect from the number of DLC's compared to the number of positive reviews. The graph does show us some valuable points though, we can see that for games with a very high review percentage there is a general look that we can see that these games tend to recieve small numbers of DLC's which indicates to me that the developers of these games continued support for these games after release due to positive perception. We can also see some games with a lot of DLC's that have a lower review percentage which indicates to me that these games are being milked for money and that the developers are not putting in the effort to make the game better. This is a very interesting trend as it shows that the number of DLC's does not always correlate with the positive reviews and that some games can be successful with a small number of DLC's while others can be unsuccessful with a large number of DLC's.
 
-```{r echo=FALSE}
+```{r fig.width=10, fig.height=6}
 # Filter the dataset:
 # - Remove free games (price > 0)
 # - Ensure positive review percentage is between 40-100
@@ -122,7 +117,7 @@ ggplot(steam_games_filtered, aes(x = price, y = pct_pos_total)) +
 
 Taking a deeper dive into the meaning of this graph I can see that there is a non-linear relationship between the price of games and the percentage of positive reviews. The graph shows the very cheap games have a slightly lower positive percentage than the games in the range of about 20-30. But we also see as games get above this range players seem to be more harsh in the reviews as I think that these players have a higher expectation of the game based on the price that they paid. We can also see that there is outliers among the data as there is low rated games in in all ranges which shows that no matter the price games can be rated low. But in general we have seen that the price of games does have an impact on player perception and forgiveness for flaws within games.
 
-```{r echo=FALSE}
+```{r}
 # Convert release_date to year
 steam_games <- steam_games %>%
   mutate(release_year = year(ymd(release_date)))
@@ -180,7 +175,7 @@ genre_percentages <- steam_games_filtered %>%
   mutate(percentage = 100 * genre_count / total_games)
 ```
 
-```{r echo=FALSE}
+```{r fig.width=10, fig.height=6}
 ggplot(genre_percentages, aes(x = factor(release_year), y = percentage, fill = genres)) +
   geom_bar(stat = "identity", position = "dodge", width = 0.7) +
   scale_y_continuous(expand = expansion(mult = c(0, 0.1))) +
@@ -252,7 +247,7 @@ for (yr in selected_years) {
 }
 ```
 
-```{r echo=FALSE}
+```{r fig.width=10, fig.height=6}
 # Convert release_date to year
 steam_games <- steam_games %>%
   mutate(release_year = year(ymd(release_date)))  
@@ -297,7 +292,7 @@ ggplot(massively_multiplayer_growth, aes(x = release_year, y = game_count)) +
 
 These graphs can show us a few interesting things about the trends of game genres over the years, In the first graph we see the percentage of games released in the top 5 genres over the years. We can see the dominance of action games in the early 2010's and how the genre has dropped off slightly in recent years. We can also see the rise of casual games which in turn shows the growth of the gaming industry in these years as more and more casual gamers have started playing which has shifted developers focus to jump into the casual markets as shown in the graph. We can also see a large amount of Indie games released more often by smaller developers trying to make a name for themselves which is still a very steady trend in the industry. We can also see the rise of Massively Multiplayer games in the last few years which is a very interesting trend as it shows that with the increase in computational power and internet speeds that these games are becoming more and more popular.I feel these graphs show a very interesting oversight into the world of game genres and the trends that have come and gone over the years.
 
-```{r echo=FALSE}
+```{r fig.width=10, fig.height=6}
 # Convert release_date to year
 steam_games <- steam_games %>%
   mutate(release_year = year(ymd(release_date)))
@@ -333,7 +328,7 @@ ggplot(aaa_summary, aes(x = release_year, y = num_aaa_games)) +
   )
 ```
 
-```{r echo=FALSE}
+```{r fig.width=10, fig.height=6}
 # Calculate average price of AAA games per year
 aaa_price_trend <- steam_games %>%
   filter(price > 40, !is.na(release_year)) %>%
@@ -361,7 +356,7 @@ ggplot(aaa_price_trend, aes(x = release_year, y = avg_price)) +
   )
 ```
 
-```{r echo=FALSE, fig.width=10, fig.height=6}
+```{r fig.width=10, fig.height=6}
 aaa_games %>%
   filter(!is.na(genres)) %>%
   separate_rows(genres, sep = ", ") %>%
